--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -1,21 +1,20 @@
-<!DOCTYPE html>
-
-<html>
-    <head>
-        <title>Test game</title>
-        <script src="game.js" type="text/javascript"></script>
-        <style>
-            html,body,canvas{
-                margin: 0;
-                padding: 0;
-            }
-            canvas{
-                margin: 50px;
-                //background-color: #aaa;
-            }
-        </style>
-    </head>
-    <body onload="startGame();">
-        <canvas id="game" width="900" height="500"></canvas>
-    </body>
+﻿<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml">
+<head>
+    <title>Test game</title>
+    <script src="game.js"></script>
+    <style>
+        html,body,canvas{
+            margin: 0;
+            padding: 0;
+        }
+        canvas{
+            margin: 50px;
+            background-color: #aaa;
+        }
+    </style>
+</head>
+<body onload="startGame();">
+    <canvas id="game" width="900" height="500"></canvas>
+</body>
 </html>
