--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -2,19 +2,10 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Test game</title>
-    <script src="game.js"></script>
-    <style>
-        html,body,canvas{
-            margin: 0;
-            padding: 0;
-        }
-        canvas{
-            margin: 50px;
-            background-color: #aaa;
-        }
-    </style>
+    <script src="Script/game.js" type="text/javascript"></script>
+    <link href="CSS/Style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body onload="startGame();">
-    <canvas id="game" width="900" height="500"></canvas>
+    <canvas id="game" width="1000" height="600"></canvas>
 </body>
 </html>
