--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -2,6 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Test game</title>
+    <script src="Script/kinetic-v4.4.3.js"></script>
     <script src="Script/game.js" type="text/javascript"></script>
     <link href="CSS/Style.css" rel="stylesheet" type="text/css"/>
 </head>
