--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -7,6 +7,7 @@
     <link href="CSS/Style.css" rel="stylesheet" type="text/css"/>
 </head>
 <body onload="startGame();">
+    <div id="info"></div>
     <canvas id="game" width="1000" height="600"></canvas>
 </body>
 </html>
