--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -2,13 +2,21 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <title>Test game</title>
-    <script src="Script/kinetic-v4.4.3.js"></script>
-    <script src="Script/test.js"></script>
-    <script src="Script/game.js" type="text/javascript"></script>
-    <link href="CSS/Style.css" rel="stylesheet" type="text/css"/>
+    <link href="CSS/Style.css" rel="stylesheet" />
+    <link href="CSS/animate.css" rel="stylesheet" />
+    <script src="Script/jquery-2.1.1.min.js"></script>
+    <script src="Script/game.js"></script>
+    <script src="Script/jquery.lettering.js"></script>
+    <script src="Script/jquery.textillate.js"></script>
+    <script src="Script/jquery.fittext.js"></script>
 </head>
 <body onload="startGame();">
-    <div id="info"></div>
-    <canvas id="game" width="1000" height="600"></canvas>
+    <div id="info"><p id="text" data-in-effect="fadeIn" data-in-sequence="true">Идеята ми е тук да се сложи някакъв текст като мини история за Пешо и неговия път към СофтУни...<br/> Здравейте, аз съм Пешо... Чух че името ми е известно в СофтУни и затова ще кандидатствам обаче трябва да натрупам знания по C#... нещо такова... не съм много добър в писането на истории </p></div>
+   <canvas id="game" width="1000" height="600"></canvas>
+    <script>
+        $(function () {
+            $('#text').textillate();
+        });
+    </script>
 </body>
 </html>
