--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -11,7 +11,8 @@
     <script src="Script/jquery.fittext.js"></script>
 </head>
 <body onload="startGame();">
-    <div id="info"><p id="text" data-in-effect="fadeIn" data-in-sequence="true">Идеята ми е тук да се сложи някакъв текст като мини история за Пешо и неговия път към СофтУни...<br/> Здравейте, аз съм Пешо... Чух че името ми е известно в СофтУни и затова ще кандидатствам обаче трябва да натрупам знания по C#... нещо такова... не съм много добър в писането на истории </p></div>
+    <div id="info"><p id="text" data-in-effect="bounce" data-in-sequence="true">Идеята ми е тук да се сложи някакъв текст като мини история за Пешо и неговия път към СофтУни... Здравейте, аз съм Пешо... Чух че името ми е известно в СофтУни и затова ще кандидатствам обаче трябва да натрупам знания по C#... нещо такова... не съм много добър в писането на истории </p>
+    </div>
    <canvas id="game" width="1000" height="600"></canvas>
     <script>
         $(function () {
