--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -16,7 +16,8 @@
    <canvas id="game" width="1000" height="600"></canvas>
     <script>
         $(function () {
-            $('#text').textillate();
+            //uncomment to animate text
+           // $('#text').textillate();
         });
     </script>
 </body>
