--- a/TeamWorkJavaScript/public_html/test.html
+++ b/TeamWorkJavaScript/public_html/test.html
@@ -14,7 +14,7 @@
     <p id="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam massa enim, consectetur sit amet enim at, ornare interdum lacus. Fusce molestie risus vitae erat facilisis pretium. Suspendisse non risus velit. Fusce et neque vitae sapien dignissim ullamcorper. Curabitur ac nibh nec lacus interdum blandit. Fusce euismod sed ipsum vel dictum. Duis mi neque, venenatis scelerisque metus id, suscipit pharetra libero. Nulla tincidunt arcu purus. Duis in ligula volutpat, pharetra leo quis, lacinia purus. Phasellus vitae urna a quam hendrerit euismod imperdiet ac arcu. In in orci dictum, laoreet lorem et, aliquam massa. Curabitur sagittis pulvinar turpis quis auctor. Morbi felis elit, tincidunt quis augue ut, eleifend adipiscing dui.</p>
     <script>
         $('#button').on('click', function () {
-            $('#text').css('display', 'block');
+            $('#text').show();
             $('#button').hide();
         });
     </script>
