--- a/TeamWorkJavaScript/public_html/menu.html
+++ b/TeamWorkJavaScript/public_html/menu.html
@@ -1,6 +1,7 @@
 ﻿<button id="start" onclick="(function () {
     $('#menu').hide();
     $('#game').show();
+    $('#navigation').show();
     startGame();
 })();">Play</button>
 <button id="story">Story</button>
