--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -15,6 +15,13 @@
         <div id="info" style="display: none;"><p id="text" data-in-effect="bounce" data-in-sequence="true">Идеята ми е тук да се сложи някакъв текст като мини история за Пешо и неговия път към СофтУни... Здравейте, аз съм Пешо... Чух че името ми е известно в СофтУни и затова ще кандидатствам обаче трябва да натрупам знания по C#... нещо такова... не съм много добър в писането на истории </p>
         </div>
         <div id="menu"></div>
+        <div id="navigation">
+            <button id="back">Back</button>
+            <button id="pause">Pause</button>
+            <div id="score">Score: </div>
+            <div id="timer">Time: </div>
+            <div id="music"><a href="#"/></div>
+        </div>
        <canvas id="game" width="1000" height="600"></canvas>
         <script>
             $(function () {
@@ -23,6 +30,7 @@
                 });
             });
             $('#game').hide();
+            $('#navigation').hide();
             $(function () {
                 //uncomment to animate text
                // $('#text').textillate();
