--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -9,6 +9,7 @@
     <script src="Script/jquery.lettering.js"></script>
     <script src="Script/jquery.textillate.js"></script>
     <script src="Script/jquery.fittext.js"></script>
+    <script src="Script/timer.js"></script>
 </head>
 <body>
     <div id="wrapper">
@@ -20,11 +21,12 @@
                 $('#menu').show();
                 $('#game').hide();
                 $('#navigation').hide();
+
                 startGame();
             })();">Back</button>
             <button id="pause">Pause</button>
-            <div id="score">Score: 0</div>
-            <div id="timer">Time: </div>
+            <div id="score">Score: <span>0000</span></div>
+            <div id="timer">Time: <span id="countdown"></span></div>
             <div id="music"><a href="#"/></div>
         </div>
        <canvas id="game" width="1000" height="600"></canvas>
