--- a/TeamWorkJavaScript/public_html/menu.html
+++ b/TeamWorkJavaScript/public_html/menu.html
@@ -3,6 +3,7 @@
     $('#game').show();
     $('#navigation').show();
     startGame();
+    timer.start();
 })();">Play</button>
 <button id="story">Story</button>
 <button id="controls">How to play?</button>
