--- a/TeamWorkJavaScript/public_html/menu.html
+++ b/TeamWorkJavaScript/public_html/menu.html
@@ -1,5 +1,6 @@
 ﻿<button id="start" onclick="(function () {
     $('#menu').hide();
+    $('#msg').hide();
     $('#game').show();
     $('#navigation').show();
     startGame();
