--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -9,6 +9,7 @@
     <script src="Script/jquery.textillate.js"></script>
     <script src="Script/jquery.fittext.js"></script>
     <script src="Script/timer.js"></script>
+    <script src="Script/messages.js"></script>
     <script>
         var timer = new Timer(300);
     </script>
@@ -21,14 +22,21 @@
                 $('#menu').show();
                 $('#game').hide();
                 $('#navigation').hide();
+                $('#msg').hide();
                 timer.reset();
                 startGame();
             })();">Back</button>
-            <button id="pause">Pause</button>
+            <button id="pause" onclick="(function () {
+                getMessage();
+                $('#msg').show();
+                $('#menu').hide();
+                timer.stop();
+            })();">Pause</button>
             <div id="score">Score: <span>0000</span></div>
             <div id="timer">Time: <span id="countdown"></span></div>
             <div id="music"><a href="#"/></div>
         </div>
+        <div id="msg"></div>
        <canvas id="game" width="1000" height="600"></canvas>
         <script>
             $(function () {
@@ -37,6 +45,7 @@
                 });
             });
             $('#game').hide();
+            $('#msg').hide();
             $('#navigation').hide();
             $(function () {
                 //uncomment to animate text
