--- a/TeamWorkJavaScript/public_html/menu.html
+++ b/TeamWorkJavaScript/public_html/menu.html
@@ -3,7 +3,7 @@
     $('#msg').hide();
     $('#game').show();
     $('#navigation').show();
-    startGame();
+    startGame(1);
     timer.start();
 })();">Play</button>
 <button id="story">Story</button>
