take message from array

--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -37,7 +37,7 @@
                     document.addEventListener('keydown', handler, false);
                     $('#msg').hide();
                 }
-                getMessage();
+                getMessage(messages[0]);
                 $('#menu').hide();
                 timer.pause();
             })();">
