--- a/TeamWorkJavaScript/public_html/menu.html
+++ b/TeamWorkJavaScript/public_html/menu.html
@@ -1,11 +1,13 @@
-﻿<button id="start" onclick="(function () {
-    $('#menu').hide();
-    $('#msg').hide();
-    $('#game').show();
-    $('#navigation').show();
-    startGame(1);
-    timer.start();
-})();">Play</button>
-<button id="story">Story</button>
-<button id="controls">How to play?</button>
-<button id="about">About</button>
+<div class="menu">
+    ﻿<button id="start" onclick="(function () {
+        $('#menu').hide();
+        $('#msg').hide();
+        $('#game').show();
+        $('#navigation').show();
+        startGame(1);
+        timer.start();
+    })();">Play</button>
+    <button id="story">Story</button>
+    <button id="controls">How to play?</button>
+    <button id="about">About</button>
+</div>
