--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -8,6 +8,11 @@
     <script src="Script/jquery.lettering.js"></script>
     <script src="Script/jquery.textillate.js"></script>
     <script src="Script/jquery.fittext.js"></script>
+    <script src="Script/music.js"></script>
+    <script>
+        var music = new Audio('./music/animals.mp3');
+        music = new Music(music);
+    </script>
     <script src="Script/timer.js"></script>
     <script src="Script/messages.js"></script>
     <script>
