--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -16,7 +16,7 @@
     <script src="Script/timer.js"></script>
     <script src="Script/messages.js"></script>
     <script>
-        var timer = new Timer(30);
+        var timer = new Timer(90);
     </script>
 </head>
 <body>
@@ -56,6 +56,7 @@
             </button>
         </div>
         <div id="msg"></div>
+        <div id="aboutInfo"></div>
         <canvas id="game" width="1000" height="600"></canvas>
         <script>
             $(function () {
@@ -65,6 +66,7 @@
             });
             $('#game').hide();
             $('#msg').hide();
+            $('#aboutInfo').hide();
             $('#navigation').hide();
             $(function () {
                 //uncomment to animate text
