--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -48,7 +48,7 @@
             })();">
                 Pause
             </button>
-            <div id="score">Score: <span>0000</span></div>
+            <div id="score">Score: <span id="points">0</span></div>
             <div id="timer">Time: <span id="countdown"></span></div>
             <button id="music"onclick="(function () {
                 $('#music').css('background-image', 'url(\'./IMG/sound-off.png\')');
