How to play page added

--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -57,6 +57,7 @@
         </div>
         <div id="msg"></div>
         <div id="aboutInfo"></div>
+        <div id="howToPlay"></div>
         <canvas id="game" width="1000" height="600"></canvas>
         <script>
             $(function () {
@@ -67,6 +68,7 @@
             $('#game').hide();
             $('#msg').hide();
             $('#aboutInfo').hide();
+            $('#howToPlay').hide();
             $('#navigation').hide();
             $(function () {
                 //uncomment to animate text
