div for the story added

--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -58,6 +58,7 @@
         <div id="msg"></div>
         <div id="aboutInfo"></div>
         <div id="howToPlay"></div>
+        <div id="story"></div>
         <canvas id="game" width="1000" height="600"></canvas>
         <script>
             $(function () {
