active menu buttons

--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -58,7 +58,7 @@
         <div id="msg"></div>
         <div id="aboutInfo"></div>
         <div id="howToPlay"></div>
-        <div id="story"></div>
+        <div id="gameStory"></div>
         <canvas id="game" width="1000" height="600"></canvas>
         <script>
             $(function () {
@@ -70,6 +70,7 @@
             $('#msg').hide();
             $('#aboutInfo').hide();
             $('#howToPlay').hide();
+            $('#gameStory').hide();
             $('#navigation').hide();
             $(function () {
                 //uncomment to animate text
