--- a/TeamWorkJavaScript/public_html/menu.html
+++ b/TeamWorkJavaScript/public_html/menu.html
@@ -1,4 +1,5 @@
 ﻿<div class="menu">
+    <img class="logo" src="IMG/Logo.png" alt="logo"/>
     ﻿<button id="start" onclick="(function () {
         $('#menu').hide();
         $('#msg').hide();
