--- a/TeamWorkJavaScript/public_html/index.html
+++ b/TeamWorkJavaScript/public_html/index.html
@@ -22,18 +22,17 @@
 <body>
     <div id="wrapper">
         <div id="menu"></div>
-        <div id="navigation">
-            <button id="back" onclick="(function () {
+            <div id="navigation">
+                <div id="back" onclick="(function () {
                 $('#menu').show();
                 $('#game').hide();
                 $('#navigation').hide();
                 $('#msg').hide();
                 timer.reset();
                 startGame();
-            })();">
-                Back
-            </button>
-            <button id="pause" onclick="(function () {
+                })();">Back</div>
+                
+                 <div id="pause" onclick="(function () {
                 if (timer.paused === false) {
                     document.removeEventListener('keydown', handler, false);
                     $('#msg').show();
@@ -45,16 +44,16 @@
                 getMessage(messages[0]);
                 $('#menu').hide();
                 timer.pause();
-            })();">
-                Pause
-            </button>
-            <div id="score">Score: <span id="points">0</span></div>
-            <div id="timer">Time: <span id="countdown"></span></div>
-            <button id="music"onclick="(function () {
-                $('#music').css('background-image', 'url(\'./IMG/sound-off.png\')');
-            })();">
-            </button>
-        </div>
+            })();">Pause                     
+                </div>
+                
+                <div id="score">Score: <span id="points">0</span></div>
+                <div id="timer">Time: <span id="countdown"></span></div>
+                <button id="music"onclick="(function () {
+                    $('#music').css('background-image', 'url(\'./IMG/sound-off.png\')');
+                })();">
+                </button>
+            </div>
         <div id="msg"></div>
         <div id="aboutInfo"></div>
         <div id="howToPlay"></div>
